test/error/scan/UnexpectChar.mod
MODULE UnexpectChar;

PROCEDURE Go*;
BEGIN
  !
END Go;

END UnexpectChar.
